--- a/src/app.html
+++ b/src/app.html
@@ -117,6 +117,7 @@
 			item.addEventListener('click', function() {
 				alert(`Region: ${this.getAttribute('data-name')}`)})});
 		</script>
+		</div>
 		<div style="display: contents">%sveltekit.body%</div>
 	</body>
 </html>
