--- a/src/app.html
+++ b/src/app.html
@@ -5,7 +5,7 @@
 			<link rel="icon" href="%sveltekit.assets%/favicon.png" />
 			<meta name="viewport" content="width=device-width" />
 			%sveltekit.head%
-			<link rel="stylesheet" href="/style.css">
+			<link rel="stylesheet" href="style.css">
 			<style>
 				svg { width: 100%; max-width: 960px; height: auto; }
 				.region { stroke: #000000; stroke-width: 1; }
@@ -118,7 +118,6 @@
 				alert(`Region: ${this.getAttribute('data-name')}`)})});
 		</script>
 		</div>
-		<div style="display: contents">%sveltekit.body%</div>
 	</body>
 </html>
 
