--- a/src/app.html
+++ b/src/app.html
@@ -26,6 +26,7 @@
 				
 	<div style="display: contents">%sveltekit.body%</div>
 	<script src="script.js"></script>
+	<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 	<div class="map-container">
 		<svg viewBox="0 0 960 600">
 			<!-- South Region -->
